--- a/store-promotion.html
+++ b/store-promotion.html
@@ -313,9 +313,9 @@
                     <p class="left"></p>
                     <p class="center">
                     	{{if alwaysOnTop == true}}
-                    		${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove from top'])}
+                    		${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove from BEST'])}
                     	{{else}}
-                    		${nn._([cms.global.PAGE_ID, 'channel-list', 'Set on top'])}
+                    		${nn._([cms.global.PAGE_ID, 'channel-list', 'Set this BEST'])}
                     	{{/if}}
                     </p>
                     <p class="right"></p>
