1. merge css file and image file from 9x9_ui (James) 2. fix popup message over float , change "Remove from HOT" to "remove HOT" , "Remove from BEST" to "remove BEST"

--- a/portal-manage.html
+++ b/portal-manage.html
@@ -382,7 +382,7 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
                     <p class="left"></p>
                     <p class="center">
                     	{{if alwaysOnTop == true}}
-                    		${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove from BEST'])}
+                    		${nn._([cms.global.PAGE_ID, 'channel-list', 'remove BEST'])}
                     	{{else}}
                     		${nn._([cms.global.PAGE_ID, 'channel-list', 'Set this BEST'])}
                     	{{/if}}
@@ -397,7 +397,7 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
                     <p class="left"></p>
                     <p class="center">
                     	{{if featured == true}}
-                    		${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove from HOT'])}
+                    		${nn._([cms.global.PAGE_ID, 'channel-list', 'remove HOT'])}
                     	{{else}}
                     		${nn._([cms.global.PAGE_ID, 'channel-list', 'Set this HOT'])}
                     	{{/if}}
