--- a/store-promotion.html
+++ b/store-promotion.html
@@ -313,7 +313,7 @@
                     <p class="left"></p>
                     <p class="center">
                     	{{if alwaysOnTop == true}}
-                    		${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove from BEST'])}
+                    		${nn._([cms.global.PAGE_ID, 'channel-list', 'remove BEST'])}
                     	{{else}}
                     		${nn._([cms.global.PAGE_ID, 'channel-list', 'Set this BEST'])}
                     	{{/if}}
