--- a/portal-manage.html
+++ b/portal-manage.html
@@ -5,12 +5,12 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css" />
-<link rel="stylesheet" href="stylesheets/style.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/episode.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/portal.css?v=1278" />
+<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=327348" />
+<link rel="stylesheet" href="stylesheets/style.css?v=327348" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=327348" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=327348" />
+<link rel="stylesheet" href="stylesheets/episode.css?v=327348" />
+<link rel="stylesheet" href="stylesheets/portal.css?v=327348" />
 <title>FLIPr.tv - Main Channels</title>
 </head>
 <body>
@@ -391,6 +391,8 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
                 </div>
                 <div class="tip-top"></div>
             </div>
+            {{if !cms.global.IS_REMARK}}
+            <!-- remark for pcs tag set hot -->
             <div class="btn-hot{{if featured == true}} on{{/if}}">
                 <div class="icon-holder"></div>
                 <div class="tip-white">
@@ -406,6 +408,7 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
                 </div>
                 <div class="tip-top"></div>
             </div>
+            {{/if}}
             <div class="btn-remove">
                 <div class="icon-holder"></div>
                 <div class="tip-white">
@@ -450,22 +453,22 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
 </script>
 <!-- change-category-overlay-tmpl End -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="javascripts/libs/nn-sdk.js?v=1278"></script>
-<script src="javascripts/libs/jquery.mousewheel.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.ellipsis.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.blockUI.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.charcounter.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.tmpl.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.cookie.min.js?v=1278"></script>
-<script src="javascripts/libs/json2.min.js?v=1278"></script>
-<script src="javascripts/libs/purl.min.js?v=1278"></script>
-<script src="javascripts/libs/perfect-scrollbar.js"></script>
-<script src="javascripts/v3/config.js?v=1278"></script>
-<script src="javascripts/v3/func.common.js?v=1278"></script>
-<script src="javascripts/v3/func.portal.manage.js?v=1278"></script>
-<script src="javascripts/v3/domready.common.js?v=1278"></script>
-<script src="javascripts/v3/domready.portal.manage.js?v=1278"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js?v=327348"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js?v=327348"></script>
+<script src="javascripts/libs/nn-sdk.js?v=327348"></script>
+<script src="javascripts/libs/jquery.mousewheel.min.js?v=327348"></script>
+<script src="javascripts/libs/jquery.ellipsis.min.js?v=327348"></script>
+<script src="javascripts/libs/jquery.blockUI.min.js?v=327348"></script>
+<script src="javascripts/libs/jquery.charcounter.min.js?v=327348"></script>
+<script src="javascripts/libs/jquery.tmpl.min.js?v=327348"></script>
+<script src="javascripts/libs/jquery.cookie.min.js?v=327348"></script>
+<script src="javascripts/libs/json2.min.js?v=327348"></script>
+<script src="javascripts/libs/purl.min.js?v=327348"></script>
+<script src="javascripts/libs/perfect-scrollbar.js?v=327348"></script>
+<script src="javascripts/v3/config.js?v=327348"></script>
+<script src="javascripts/v3/func.common.js?v=327348"></script>
+<script src="javascripts/v3/func.portal.manage.js?v=327348"></script>
+<script src="javascripts/v3/domready.common.js?v=327348"></script>
+<script src="javascripts/v3/domready.portal.manage.js?v=327348"></script>
 </body>
 </html>
