--- a/portal-manage.html
+++ b/portal-manage.html
@@ -289,7 +289,7 @@
 <script id="store-empty-category-li-tmpl" type="text/x-jquery-tmpl">
 <li class="empty addChannelSet disable">
     <span>
-        <a href="#">+ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Add Channel Set'])}</a>
+        <a href="#">+ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Add Channel'])}</a>
     </span>
 </li>
 </script>
