replace "http://" to "//"

--- a/signin.html
+++ b/signin.html
@@ -273,9 +273,9 @@
 </div>
 <!-- System Notice Layer End -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="http://9x9ui-j.s3-website-ap-northeast-1.amazonaws.com/all.js" charset="utf-8"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script src="//connect.facebook.net/en_US/all.js" charset="utf-8"></script>
 <script src="javascripts/libs/nn-sdk.js?v=1278"></script>
 <script src="javascripts/libs/jquery.mousewheel.min.js?v=1278"></script>
 <script src="javascripts/libs/jquery.ellipsis.min.js?v=1278"></script>
