--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 <input type="submit" value="Login" class="btn-submit" />
 </form>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="javascripts/libs/nn-sdk.js?v=1278"></script>
 <script src="javascripts/libs/purl.min.js?v=1278"></script>
 <script src="javascripts/v3/config.js?v=1278"></script>
