--- a/portal-manage.html
+++ b/portal-manage.html
@@ -453,8 +453,8 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
 </script>
 <!-- change-category-overlay-tmpl End -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js?v=327348"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js?v=327348"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js?v=327348"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js?v=327348"></script>
 <script src="javascripts/libs/nn-sdk.js?v=327348"></script>
 <script src="javascripts/libs/jquery.mousewheel.min.js?v=327348"></script>
 <script src="javascripts/libs/jquery.ellipsis.min.js?v=327348"></script>
