update clear cache v=411104

--- a/store-promotion.html
+++ b/store-promotion.html
@@ -5,12 +5,12 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css" />
-<link rel="stylesheet" href="stylesheets/style.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/episode.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/portal.css?v=1278" />
+<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/style.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/episode.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/portal.css?v=411104" />
 <title>FLIPr.tv - Store Manage</title>
 </head>
 <body>
@@ -419,20 +419,20 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="javascripts/libs/nn-sdk.js?v=1278"></script>
-<script src="javascripts/libs/jquery.mousewheel.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.ellipsis.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.blockUI.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.charcounter.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.tmpl.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.cookie.min.js?v=1278"></script>
-<script src="javascripts/libs/json2.min.js?v=1278"></script>
-<script src="javascripts/libs/purl.min.js?v=1278"></script>
-<script src="javascripts/libs/perfect-scrollbar.js"></script>
-<script src="javascripts/v3/config.js?v=1278"></script>
-<script src="javascripts/v3/func.common.js?v=1278"></script>
-<script src="javascripts/v3/func.portal.store.promotion.js?v=1278"></script>
-<script src="javascripts/v3/domready.common.js?v=1278"></script>
-<script src="javascripts/v3/domready.portal.store.promotion.js?v=1278"></script>
+<script src="javascripts/libs/nn-sdk.js?v=411104"></script>
+<script src="javascripts/libs/jquery.mousewheel.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.ellipsis.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.blockUI.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.charcounter.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.tmpl.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.cookie.min.js?v=411104"></script>
+<script src="javascripts/libs/json2.min.js?v=411104"></script>
+<script src="javascripts/libs/purl.min.js?v=411104"></script>
+<script src="javascripts/libs/perfect-scrollbar.js?v=411104"></script>
+<script src="javascripts/v3/config.js?v=411104"></script>
+<script src="javascripts/v3/func.common.js?v=411104"></script>
+<script src="javascripts/v3/func.portal.store.promotion.js?v=411104"></script>
+<script src="javascripts/v3/domready.common.js?v=411104"></script>
+<script src="javascripts/v3/domready.portal.store.promotion.js?v=411104"></script>
 </body>
 </html>
