--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -5,46 +5,46 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="//9x9ui.s3.amazonaws.com/poi/jquery.poi.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/style.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/playback.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/jquery.datepick.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/epcurate.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/ep-curation.css?v=1278" />
+<link rel="stylesheet" href="//9x9ui.s3.amazonaws.com/poi/jquery.poi.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/style.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/playback.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/jquery.datepick.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/epcurate.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/ep-curation.css?v=411104" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="//9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=1278"></script>
+<script src="//9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=411104"></script>
 <!-- <script src="javascripts/libs/jquery.poi.js"></script> -->
-<script src="javascripts/libs/nn-sdk.js?v=1278"></script>
-<script src="javascripts/libs/respond.min.js"></script>
-<script src="javascripts/libs/jquery.mousewheel.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.ellipsis.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.blockUI.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.charcounter.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.uniform.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.swfobject.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.titlecard.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.tmpl.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.cookie.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.countdown.js?v=1278"></script>
-<script src="javascripts/libs/jquery.autotab.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.cycle.all.min.js?v=1278"></script>
-<script src="javascripts/libs/jquery.datepick.min.js?v=1278"></script>
-<script src="javascripts/libs/perfect-scrollbar.min.js?v=1278"></script>
-<script src="javascripts/libs/json2.min.js?v=1278"></script>
-<script src="javascripts/libs/purl.min.js?v=1278"></script>
-<script src="javascripts/libs/swfupload/swfupload.js?v=1278"></script>
-<script src="javascripts/v3/config.js?v=1278"></script>
-<script src="javascripts/v3/cms.locale-utility.js"></script>
-<script src="javascripts/v3/func.common.js?v=1278"></script>
-<script src="javascripts/v3/func.curation.js?v=1278"></script>
-<script src="javascripts/v3/domready.common.js?v=1278"></script>
-<script src="javascripts/v3/domready.curation.js?v=1278"></script>
-<script src="javascripts/v3/cms.youtube-utility.js"></script>
-<script src="javascripts/v3/cms.poi-utility.js"></script>
+<script src="javascripts/libs/nn-sdk.js?v=411104"></script>
+<script src="javascripts/libs/respond.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.mousewheel.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.ellipsis.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.blockUI.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.charcounter.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.uniform.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.swfobject.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.titlecard.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.tmpl.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.cookie.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.countdown.js?v=411104"></script>
+<script src="javascripts/libs/jquery.autotab.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.cycle.all.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.datepick.min.js?v=411104"></script>
+<script src="javascripts/libs/perfect-scrollbar.min.js?v=411104"></script>
+<script src="javascripts/libs/json2.min.js?v=411104"></script>
+<script src="javascripts/libs/purl.min.js?v=411104"></script>
+<script src="javascripts/libs/swfupload/swfupload.js?v=411104"></script>
+<script src="javascripts/v3/config.js?v=411104"></script>
+<script src="javascripts/v3/cms.locale-utility.js?v=411104"></script>
+<script src="javascripts/v3/func.common.js?v=411104"></script>
+<script src="javascripts/v3/func.curation.js?v=411104"></script>
+<script src="javascripts/v3/domready.common.js?v=411104"></script>
+<script src="javascripts/v3/domready.curation.js?v=411104"></script>
+<script src="javascripts/v3/cms.youtube-utility.js?v=411104"></script>
+<script src="javascripts/v3/cms.poi-utility.js?v=411104"></script>
 <title>FLIPr.tv - Episode Curation - Curation</title>
 </head>
 <body class="scrollable">
