--- a/portal-manage.html
+++ b/portal-manage.html
@@ -5,12 +5,12 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=327348" />
-<link rel="stylesheet" href="stylesheets/style.css?v=327348" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=327348" />
-<link rel="stylesheet" href="stylesheets/uniform.css?v=327348" />
-<link rel="stylesheet" href="stylesheets/episode.css?v=327348" />
-<link rel="stylesheet" href="stylesheets/portal.css?v=327348" />
+<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/style.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/episode.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/portal.css?v=411104" />
 <title>FLIPr.tv - Main Channels</title>
 </head>
 <body>
@@ -453,22 +453,22 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
 </script>
 <!-- change-category-overlay-tmpl End -->
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js?v=327348"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js?v=327348"></script>
-<script src="javascripts/libs/nn-sdk.js?v=327348"></script>
-<script src="javascripts/libs/jquery.mousewheel.min.js?v=327348"></script>
-<script src="javascripts/libs/jquery.ellipsis.min.js?v=327348"></script>
-<script src="javascripts/libs/jquery.blockUI.min.js?v=327348"></script>
-<script src="javascripts/libs/jquery.charcounter.min.js?v=327348"></script>
-<script src="javascripts/libs/jquery.tmpl.min.js?v=327348"></script>
-<script src="javascripts/libs/jquery.cookie.min.js?v=327348"></script>
-<script src="javascripts/libs/json2.min.js?v=327348"></script>
-<script src="javascripts/libs/purl.min.js?v=327348"></script>
-<script src="javascripts/libs/perfect-scrollbar.js?v=327348"></script>
-<script src="javascripts/v3/config.js?v=327348"></script>
-<script src="javascripts/v3/func.common.js?v=327348"></script>
-<script src="javascripts/v3/func.portal.manage.js?v=327348"></script>
-<script src="javascripts/v3/domready.common.js?v=327348"></script>
-<script src="javascripts/v3/domready.portal.manage.js?v=327348"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script src="javascripts/libs/nn-sdk.js?v=411104"></script>
+<script src="javascripts/libs/jquery.mousewheel.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.ellipsis.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.blockUI.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.charcounter.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.tmpl.min.js?v=411104"></script>
+<script src="javascripts/libs/jquery.cookie.min.js?v=411104"></script>
+<script src="javascripts/libs/json2.min.js?v=411104"></script>
+<script src="javascripts/libs/purl.min.js?v=411104"></script>
+<script src="javascripts/libs/perfect-scrollbar.js?v=411104"></script>
+<script src="javascripts/v3/config.js?v=411104"></script>
+<script src="javascripts/v3/func.common.js?v=411104"></script>
+<script src="javascripts/v3/func.portal.manage.js?v=411104"></script>
+<script src="javascripts/v3/domready.common.js?v=411104"></script>
+<script src="javascripts/v3/domready.portal.manage.js?v=411104"></script>
 </body>
 </html>
