#12312 PCS notification 警示文出現方式錯誤

--- a/app-notification.html
+++ b/app-notification.html
@@ -235,6 +235,7 @@
             </fieldset>
 
             <div class="form-submit-wrap">
+                <span class="notifyMsg wRed" ></span>
                 <a class="normal-btn vCancel" href="#">${nn._([cms.global.PAGE_ID, 'notification', 'Cancel'])}</a>
                 <a class="normal-btn vSend" href="#">${nn._([cms.global.PAGE_ID, 'notification', 'Send'])}</a>
                 
