--- a/index.html
+++ b/index.html
@@ -459,8 +459,15 @@
                 <div class="tip-bottom"></div>
             </div>
             <p class="time">
-                ${nn._([cms.global.PAGE_ID, 'channel-list', 'Update:'])} ${cms.common.formatTimestamp(updateDate)}
-                {{if true === isYoutubeSync}}<img src="images/icon_youtube_sm.png">{{/if}}
+                ${nn._([cms.global.PAGE_ID, 'channel-list', 'Update:'])} ${cms.common.formatTimestamp(updateDate)}<br /><div style="text-align:right; margine-left:  12px ">
+                {{if true === isYoutubeSync}}
+                    <img src="images/icon_youtube_sm.png">
+                    <img src="images/icon_youtube_order_${sorting}.png">
+                {{/if}}
+                {{if cms.global.USER_PRIV.isAutoOn === true && status === 0}}
+                    <img src="images/icon_program_store.png">
+                {{/if}}
+                &nbsp; </div>
             </p>
             <div class="func-btns">
                 <div class="btn-wrap enable">
