--- a/channel-setting.html
+++ b/channel-setting.html
@@ -369,6 +369,31 @@
         </div>
     </div>
     {{/if}}
+    {{if cms.global.USER_PRIV.isAutoOn === true}}
+    <div class="fminput clearfix">
+        <input type="hidden" id="StorePool" name="status" value="${status}" />
+        <label>{{html nn._([cms.global.PAGE_ID, 'setting-form', 'Add to program store'])}}</label>
+        <div class="fmfield">
+            <div class="connected add-store">
+                <div class="share-item first">
+                    <img alt="youtube" src="images/icon_program_store.png">
+                    <a id="add-store-switch" href="#" class="switch-off">No</a> 
+                    <a id="fb-reconnect" href="javascript:void(0);">
+                        <img src="images/icon_question.png" alt="">
+                        <div id="msgAutoSync" class="overlay-h60 youtube-sync-tip">
+                            <img src="images/bg_tip_top.png" alt="" class="up-arrow">
+                            <div class="overlay-h60-left"></div>
+                            <div class="overlay-h60-center">
+                                {{html nn._([cms.global.PAGE_ID, 'setting-form', 'You can find the programs which has been added to program store of "Main Channels" and "Category" at My App.'])}}
+                            </div>
+                            <div class="overlay-h60-right"></div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    {{/if}}
     <div class="form-btn">
         <div class="form-btn-wrap">
             <p class="notice hide">${nn._([cms.global.PAGE_ID, 'setting-form', 'Please fill in all required fields.'])}</p>
