--- a/channel-add.html
+++ b/channel-add.html
@@ -169,7 +169,7 @@
     <div class="overlay-h172-center">
         <p class="btn-close"></p>
         <img src="images/icon_warning_lg.png" alt="">
-        <p class="vMsg">This program will automatically synchronize information and videos from YouTube at 9 AM, 2 PM and 8 PM every day. Are you sure to auto sync?</p>
+        <p class="vMsg">This program will automatically synchronize information and videos from YouTube at 0 AM, 8 AM, 12 PM, 6 PM and 9 PM every day. Are you sure to auto sync?</p>
         <div class="overlay-button-holder">
             <div class="btn-gray">
                 <p class="left"></p>
@@ -373,7 +373,7 @@
                             <img src="images/bg_tip_top.png" alt="" class="up-arrow">
                             <div class="overlay-h60-left"></div>
                             <div class="overlay-h60-center">
-                                {{html nn._([cms.global.PAGE_ID, 'setting-form', 'Program will automatically synchronize with YouTube at 9 AM, 2 PM and 8 PM every day. Manually do so by clicking "Sync" in program list.'])}}
+                                {{html nn._([cms.global.PAGE_ID, 'setting-form', 'Program will automatically synchronize with YouTube at 0 AM, 8 AM, 12 PM, 6 PM and 9 PM every day. Manually do so by clicking "Sync" in program list.'])}}
                             </div>
                             <div class="overlay-h60-right"></div>
                         </div>
