youtube sync update time Tooltip message update

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -359,7 +359,7 @@
                             <img src="images/bg_tip_top.png" alt="" class="up-arrow">
                             <div class="overlay-h60-left"></div>
                             <div class="overlay-h60-center">
-                                {{html nn._([cms.global.PAGE_ID, 'setting-form', 'Program will automatically synchronize with YouTube at 0 AM, 8 AM, 12 PM, 6 PM and 9 PM every day. Manually do so by clicking "Sync" in program list.'])}}
+                                {{html nn._([cms.global.PAGE_ID, 'setting-form', 'Program will auto-sync with YouTube at 0 AM, 8 AM, 12 PM, 6 PM and 9 PM every day. Manually do so by clicking "Sync" in program list.'])}}
                             </div>
                             <div class="overlay-h60-right"></div>
                         </div>
