--- a/portal-manage.html
+++ b/portal-manage.html
@@ -233,9 +233,9 @@
         <div class="msg-left"></div>
         <div class="msg-center">
             <p class="btn-msg-close"></p>
-            <h2 id="search-title">Add programs into your “<span>Set 2</span>”</h2>
+            <h2 id="search-title">Add programs into “<span>Set 2</span>”</h2>
             <form onsubmit="return false;">
-                <span class="form-title langkey">Channel Name:</span>
+                <span class="form-title langkey">Search By:</span>
                 <div class="select-gray" id="select-portal-ch">
                     <div class="select-content-gray">
                         <p id="btn-portal-ch" class="select-btn"></p>
@@ -255,7 +255,7 @@
                 </div>
                 <div class="btn-white">
                     <p class="left"></p>
-                    <p id="portal_search_channel" class="center langkey">Search</p>
+                    <p id="portal_search_channel" class="center langkey">Go</p>
                     <p class="right"></p>
                 </div> 
                 <br />
