--- a/store-promotion.html
+++ b/store-promotion.html
@@ -173,7 +173,7 @@
         <div class="msg-left"></div>
         <div class="msg-center">
             <p class="btn-msg-close"></p>
-            <h2 id="search-title">Add programs into your “<span>Promotion 1</span>”</h2>
+            <h2 id="search-title">Add programs into “<span>Promotion 1</span>”</h2>
             <form onsubmit="return false;">
                 <span class="form-title langkey">Find Programs:</span>
                 <div class="select-gray" id="select-portal-ch">
