一開始出現的 Results: Find [#] programs. ---> My programs: Find [#] programs. 中文：我的節目：找到 [#] 個節目。(#表節目數)

--- a/portal-manage.html
+++ b/portal-manage.html
@@ -260,7 +260,7 @@
                 </div> 
                 <br />
                 <p>
-                    <b class="langkeyH">Results:</b> <tit id="sRusult" data-canAdd="0" class="langkeyH"></tit>
+                    <b id="sResultHead">Results:</b> <tit id="sRusult" data-canAdd="0" class="langkeyH"></tit>
                     <span id="msg-search" class="msg-error"></span>
                 </p>
                 <br />
