[Program store] 在 Program store 的 promotion category ，要 Add program to category 彈出的 search overlay，沒有出現 My program list，目前是空白。 正確應與 Main channel 彈出的 Search overlay 一樣，會看見 Admin 帳號下已經加入 system store 的 programs。

--- a/portal-manage.html
+++ b/portal-manage.html
@@ -235,7 +235,7 @@
             <p class="btn-msg-close"></p>
             <h2 id="search-title">Add programs into “<span>Set 2</span>”</h2>
             <form onsubmit="return false;">
-                <span class="form-title langkey">Search By:</span>
+                <span class="form-title langkey">Search by:</span>
                 <div class="select-gray" id="select-portal-ch">
                     <div class="select-content-gray">
                         <p id="btn-portal-ch" class="select-btn"></p>
