--- a/store-promotion.html
+++ b/store-promotion.html
@@ -175,7 +175,7 @@
             <p class="btn-msg-close"></p>
             <h2 id="search-title">Add programs into “<span>Promotion 1</span>”</h2>
             <form onsubmit="return false;">
-                <span class="form-title langkey">Find Programs:</span>
+                <span class="form-title langkey">Search by:</span>
                 <div class="select-gray" id="select-portal-ch">
                     <div class="select-content-gray">
                         <p id="btn-portal-ch" class="select-btn"></p>
@@ -195,12 +195,12 @@
                 </div>
                 <div class="btn-white">
                     <p class="left"></p>
-                    <p id="portal_search_channel" class="center langkey">Search</p>
+                    <p id="portal_search_channel" class="center langkey">Go</p>
                     <p class="right"></p>
                 </div> 
                 <br />
                 <p>
-                    <b class="langkeyH">Results:</b> <tit id="sRusult" data-canAdd="0" class="langkeyH"></tit>
+                    <b id="sResultHead">Results:</b> <tit id="sRusult" data-canAdd="0" class="langkeyH"></tit>
                     <span id="msg-search" class="msg-error"></span>
                 </p>
                 <br />
