janet and shawn asked language string update

--- a/channel-add.html
+++ b/channel-add.html
@@ -388,7 +388,7 @@
     {{if cms.global.USER_PRIV.isAutoOn === true}}
     <div class="fminput clearfix">
         <input type="hidden" id="StorePool" name="status" value="3" />
-        <label>{{html nn._([cms.global.PAGE_ID, 'setting-form', 'Add to program store'])}}</label>
+        <label>{{html nn._([cms.global.PAGE_ID, 'setting-form', 'Add to My App'])}}</label>
         <div class="fmfield">
             <div class="connected add-store">
                 <div class="share-item first">
@@ -400,7 +400,7 @@
                             <img src="images/bg_tip_top.png" alt="" class="up-arrow">
                             <div class="overlay-h60-left"></div>
                             <div class="overlay-h60-center">
-                                {{html nn._([cms.global.PAGE_ID, 'setting-form', 'You can find the programs which has been added to program store of "Main Channels" and "Category" at My App.'])}}
+                                {{html nn._([cms.global.PAGE_ID, 'setting-form', 'You can search the programs which has been added to "Main Channels" and "Program store" of My App.'])}}
                             </div>
                             <div class="overlay-h60-right"></div>
                         </div>
