add ytlive add button into index.html the terms same to ytsync ( from janet )

--- a/index.html
+++ b/index.html
@@ -261,6 +261,14 @@
             </div>
             <div class="right"></div>
         </div>
+        <div id="create-live-program" class="btn-large btn-create">
+            <div class="left"></div>
+            <div class="center">
+                <p>{{html nn._([cms.global.PAGE_ID, 'overlay', 'Live<br />Program'])}}</p>    
+                <img src="images/icon_live_program.png" alt="">                   
+            </div>
+            <div class="right"></div>
+        </div>
         {{/if}}
         <div class="overlay-button-holder">
             <div class="btn-gray">
