Live program status check

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -205,7 +205,7 @@
         <div class="fmfield">
             <p class="text">
                 <span>
-                    <input type="text" name="sourceUrl2" id="ytUrlLive" maxlength="100" value="" class="text" data-ctype="ytlive" placeholder="https://www.youtube.com/watch?v=_ABC">
+                    <input type="text" name="sourceUrl2" id="ytUrlLive" maxlength="100" value="" data-status="editing" class="text" data-ctype="ytlive" placeholder="https://www.youtube.com/watch?v=_ABC">
                 </span>
             </p>
             <div class="clear">
