--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     <label for="filter_9x9" class="lbTypeLists">
         <input type="radio" name="filter" value="9x9" id="filter_9x9" class="lbTypeItem"> {{html nn._([cms.global.PAGE_ID, 'title-func', 'FLIPr programs'])}}</label>
     <label for="filter_youtube" class="lbTypeLists">
-        <input type="radio" name="filter" value="YoutubeSync" id="filter_youtube" class="lbTypeItem"> {{html nn._([cms.global.PAGE_ID, 'title-func', 'Youtube sync programs'])}}</label>
+        <input type="radio" name="filter" value="YoutubeSync" id="filter_youtube" class="lbTypeItem"> {{html nn._([cms.global.PAGE_ID, 'title-func', 'YouTube sync programs'])}}</label>
     <label for="filter_youtubelive" class="lbTypeLists">
         <input type="radio" name="filter" value="YoutubeLive" id="filter_youtubelive" class="lbTypeItem"> {{html nn._([cms.global.PAGE_ID, 'title-func', 'Live programs'])}}</label>
 </p>
@@ -442,7 +442,7 @@
                              src="images/icon_live_program_sm.png">
                 {{/if}}
                 {{if cms.global.USER_PRIV.isAutoOn === true && status === 0}}
-                    <img title="{{html nn._([cms.global.PAGE_ID, 'channel-list', 'On program store'])}}"
+                    <img title="{{html nn._([cms.global.PAGE_ID, 'channel-list', 'On my app'])}}"
                          src="images/icon_program_store.png">
                 {{/if}}
             </p>
