--- a/app-notification.html
+++ b/app-notification.html
@@ -286,7 +286,38 @@
                     <label for="scheduleun-app2" class="radio-btn">${nn._([cms.global.PAGE_ID, 'notification', 'Scheduled'])}</label>
                     <br>
                     <div class="form-data f-schedule-date hide">
-                        <input type="date" >
+
+
+                <div class="datepicker"></div>
+
+<div>
+<h2>Hour:</h2>
+<select id="schedule-hour">
+<option value="00">00</option>
+<option value="01" disalbed="disalbed">11</option>
+<option value="12">112</option>
+<option value="13">113</option>
+<option value="14">114</option>
+<option value="15">115</option>
+<option value="16">116</option>
+
+</select>
+
+<h2>Minute:</h2>
+<select id="schedule-minute">
+<option value="">00</option>
+<option value="1" disalbed>11</option>
+<option value="12">112</option>
+<option value="13">113</option>
+<option value="14">114</option>
+<option value="15">115</option>
+<option value="16">116</option>
+
+</select>
+</div>
+                        <input id="basicExample" type="date" >
+
+                        <input id="ssdate" type="date" >
                     </div>
 
                                                                    
