update language string

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                              src="images/icon_live_program_sm.png">
                 {{/if}}
                 {{if cms.global.USER_PRIV.isAutoOn === true && status === 0}}
-                    <img title="{{html nn._([cms.global.PAGE_ID, 'channel-list', 'On my app'])}}"
+                    <img title="{{html nn._([cms.global.PAGE_ID, 'channel-list', 'In my app'])}}"
                          src="images/icon_program_store.png">
                 {{/if}}
             </p>
